# mst-boruvka

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
include/mst/: boruvka_omp.hpp  boruvka_seq.hpp  edge.hpp  graph_csr.hpp  kruskal.hpp  prim.hpp  union_find.hpp  union_find_atomic.hpp
results/: e10_knn_benchmark.csv  e1_algo_comparison.csv  e2_strong_scaling.csv  e3_size_scaling.csv  e4_rounds.csv  e5_profile.csv  e6_weak_scaling.csv  e7_density_heatmap.csv  e8_multi_density.csv  e9_grid_benchmark.csv
scripts/: animate_mst.py  plot_bench.py  plot_e10_knn_benchmark.py  plot_e1_algo_comparison.py  plot_e2_strong_scaling.py  plot_e3_size_scaling.py  plot_e4_rounds.py  plot_e5_profile.py  plot_e6_weak_scaling.py  plot_e7_density_heatmap.py  plot_e8_multi_density.py  plot_e9_grid_benchmark.py  run_all.sh  run_bench_sweep.ps1  run_bench_sweep.sh  run_density_heatmap.sh  run_experiments.sh  run_grid_benchmark.sh  run_knn_benchmark.sh  run_multi_density.sh  run_profile.sh  run_weak_scaling.sh  visualize_mst.py
src/: boruvka_omp.cpp  boruvka_seq.cpp  graph_csr.cpp  kruskal.cpp  prim.cpp  union_find.cpp  union_find_atomic.cpp
tests/: CMakeLists.txt  test_boruvka_omp.cpp  test_boruvka_seq.cpp  test_csr.cpp  test_determinism.cpp  test_kruskal.cpp  test_prim.cpp  test_property_vs_boost.cpp  test_smoke.cpp  test_union_find.cpp  test_union_find_atomic.cpp
tools/: CMakeLists.txt  bench.cpp  dump_mst.cpp  gen_graph.cpp  gen_grid.cpp  gen_knn.cpp  profile_omp.cpp
